# rs-playground

./: .gitignore
crates/ffmpeg-nd/: Cargo.toml  README.md
crates/ffmpeg-nd/examples/: encode_video.rs
crates/ffmpeg-nd/src/: codec.rs  format.rs  lib.rs  nd_media.rs  util.rs
crates/ffmpeg-nd/src/codec/: codec.rs  context.rs  encoder.rs  id.rs  packet.rs  video_encoder.rs
crates/ffmpeg-nd/src/codec/codec/: functions.rs  name.rs
crates/ffmpeg-nd/src/codec/context/: video_context_builder.rs
crates/ffmpeg-nd/src/codec/video_encoder/: config.rs  frame_data.rs
crates/ffmpeg-nd/src/codec/video_encoder/config/: codec.rs  pixel_format.rs
crates/ffmpeg-nd/src/codec/video_encoder/config/presets/: framerate.rs  resolution.rs
crates/ffmpeg-nd/src/format/: context.rs  format.rs  io.rs  stream.rs
crates/ffmpeg-nd/src/format/format/: format.rs  output.rs
crates/ffmpeg-nd/src/format/format/output/: functions.rs
crates/ffmpeg-nd/src/format/io/: context.rs  flag.rs
crates/ffmpeg-nd/src/nd_media/: encoder.rs  frame_data.rs  functions.rs  media_context.rs  muxer.rs  packet_iterator.rs  video_context_builder.rs
crates/ffmpeg-nd/src/nd_media/encoder/video/: config.rs
crates/ffmpeg-nd/src/nd_media/encoder/video/config/: codec.rs  error.rs  pixel_format.rs  presets.rs
crates/ffmpeg-nd/src/nd_media/encoder/video/config/presets/: framerate.rs  (+1 more)
crates/ffmpeg-nd/src/util/: _util.rs  error.rs  frame.rs  log.rs  mathematics.rs  media.rs  opt.rs  pix_fmt.rs  rational.rs  utils.rs
crates/ffmpeg-nd/src/util/log/: level.rs
crates/ffmpeg-nd/src/util/opt/: search_flag.rs
(+4 files in other folders)
